PYIC-4727 Resolve sonar warning.